--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <title>Blue Talon Bistro Turkey Trot 2023</title>
 </head>
 <body>
-    
+    <div class="container">
+        
+    </div>
 </body>
 </html>
