Updated nav/hero; Started to add content

--- a/index.html
+++ b/index.html
@@ -40,10 +40,72 @@
 
             <div class="hero">
                 <div class="hero-content">
-                    <h1>2023 Blue Talon Bistro Turkey Trot</h1>
-                    <button class="register-button">Register</button>
+                    <h1>2023 Blue Talon Bistro <br> Turkey Trot</h1>
+                    <button class="register-button hero-btn">Register</button>
                 </div>
             </div>
+
+            <div class="about">
+                <h1>About the Race</h1>
+                <p>
+                    The Blue Talon Turkey Trot started in 2006 in hopes of providing an opportunity for the community to come together on a great, family holiday and help support local charities. Since then, the race has grown into something amazing with nearly 3,000 runners! The Blue Talon Bistro Turkey Trot has becomethe most notable race in the region – on the most popular running day of the year!
+                    Enjoy a scenic 5K followed by a Kids’ Fun Run that winds through the grounds of Colonial
+                    Williamsburg and the College of William & Mary before ending right here on Prince George Street. Bring the kids, the stroller, the whole family and get your holiday off to a great start – you can burn off some of those calories before Thanksgiving Dinner even happens!
+                    Sure, you’ll get a great medal for running, but your participation will also help local charities continue the vital work they do. And then there’s our Post Race Raffle – where you have the chance to take home some of the 100’s of great food/wine related gifts that are donated! Who doesn’t want to go home with a pie or a bouquet of flowers for the family table?
+                    Head down on Thanksgiving Morning!
+                </p>
+                <img src="project-images/mobile-about-img.jpg" alt="runner">
+            </div>
+
+            <div class="event-details">
+                <h1>Event Details</h1>
+                <div class="details-box">
+                    <h3>Date & Time</h3>
+                    <p>
+                        <b>Thursday, November 23 2023</b><br>
+                        5K Race starts at 8:30 a.m.<br>
+                        1 Mile Fun Run starts at 10:00am
+                    </p>
+                </div>
+                <div class="details-box">
+                    <h3>Location</h3>
+                    <p>
+                        <b>Blue Talon Bistro</b><br>
+                        420 Prince George Street <br>
+                        Williamsburg, VA 23185
+                    </p>
+                </div>
+
+                <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.9740082474946!2d-76.70929462435923!3d37.272043440960424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b0890b954e02a1%3A0x614dbdea001cefcf!2sBlue%20Talon%20Bistro!5e0!3m2!1sen!2sus!4v1698335414332!5m2!1sen!2sus" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
+                <div class="schedule">
+                    <h2>Schedule</h2>
+                    <h4>Wednesday, November 22 2023</h4>
+                    <div class="list-item">
+                        <p class="time">2:00-6:00 p.m</p>
+                        <p class="activity">Packet pick up at the Blue Talon Bistro entrance facing Prince George St.</p>
+                    </div>
+
+                    <h4>Thursday, November 23 2023</h4>
+                    <div class="list-item">
+                        <p class="time">8:15 a.m.</p>
+                        <p class="activity">Registration Ends</p>
+                    </div>
+                    <div class="list-item">
+                        <p class="time">8:30 a.m.</p>
+                        <p class="activity">5K Run Starts</p>
+                    </div>
+                    <div class="list-item">
+                        <p class="time">10:00 a.m.</p>
+                        <p class="activity">1 Mile Fun Run Starts</p>
+                    </div>
+                    <div class="list-item">
+                        <p class="time">9:30 a.m.-1:00 pm</p>
+                        <p class="activity">Post-run events & activities</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
 </body>
