Updated Event Details section

--- a/index.html
+++ b/index.html
@@ -104,6 +104,21 @@
                         <p class="activity">Post-run events & activities</p>
                     </div>
                 </div>
+
+                <div class="parking">
+                    <h2>Parking</h2>
+                    <p>Paid parking is available in the Prince George St. parking deck and the many designated areas surrounding Merchant’s Square – all of which are within walking distance!</p>
+                    <button class="register-button parking-btn"><a href="https://www.merchantssquare.org/parking-directions" target="_blank">Read More</a></button>
+                </div>
+                
+                <div class="accomidations">
+                    <h2>Accomidations & Things To Do</h2>
+                    <p>We encourage all visitors to take advantage of Blue Talon Bistro’s prime location within the Williamsburg historic area. More information can be found at the link below:</p>
+                    <button class="register-button acc-btn"><a href="https://www.colonialwilliamsburghotels.com/" target="_blank">Read More</a></button>
+                </div>
+            </div>
+            <div class="sponsors">
+                
             </div>
 
         </div>
