Updated with Sponsors

--- a/index.html
+++ b/index.html
@@ -118,7 +118,12 @@
                 </div>
             </div>
             <div class="sponsors">
-                
+                <h1>Our Sponsors</h1>
+                <div class="sponsor-logos">
+                    <img class="op-bank" src="project-images/mobile-bank-logo.svg" alt="Old Point Bank Logo">
+                    <img class="maxfit" src="project-images/mobile-maxfit-logo.svg" alt="MaxFit Logo">
+                    <img class="literacy4life" src="project-images/mobile-literacy-for-life_logo.svg" alt="Literacy For Life Logo">
+                </div>
             </div>
 
         </div>
