Added volunteer and bottom sections

--- a/index.html
+++ b/index.html
@@ -125,7 +125,49 @@
                     <img class="literacy4life" src="project-images/mobile-literacy-for-life_logo.svg" alt="Literacy For Life Logo">
                 </div>
             </div>
-
+            <div class="volunteer">
+                <h1>Volunteer</h1>
+                <h4>Interested in volunteering? Feel free to fill out this form and a team member will reach out shortly.</h4>
+                <div class="volunteer-form">
+                    <form action="" method="get">
+                        <div>
+                          <label for="fname">First Name</label>
+                          <input type="text" id=fname name="fname" placeholder="John" required>
+                        </div>
+                        <div>
+                          <label for="lname">Last Name</label>
+                          <input type="text" id=lname name="lname" placeholder="Adams" required>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id=email name="email" placeholder="john.adams@gmail.com" required>
+                        </div>
+                        <div>
+                            <label for="position-of-interest">Position of Interest</label>
+                            <select name="position" id="position">
+                                <option value="">---Plese Select---</option>
+                                <option value="course-marshal">Course Marshal</option>
+                                <option value="start-finish-line">Start / Finish Line</option>
+                                <option value="water-stop">Water Stop</option>
+                                <option value="post-race-event">Post-Race Event</option>
+                            </select>
+                        </div>
+                        <div class="agree">
+                            <input type="checkbox">
+                            <label class="agree-message" for="agree">I agree to the <a href="#">Terms and Conditions</a></label>
+                        </div>
+                        <button class="register-button submit-btn">Submit</button>
+                    </form>
+                </div>
+            </div>
+            <div class="more-content">
+                <div class="display-card faq-card">
+                    <h1>FAQ</h1>
+                </div>
+                <div class="display-card contact-card">
+                    <h1>Contact Us</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
