--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 </div>
 
                 <div class="map-schedule">
-                    <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.9740082474946!2d-76.70929462435923!3d37.272043440960424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b0890b954e02a1%3A0x614dbdea001cefcf!2sBlue%20Talon%20Bistro!5e0!3m2!1sen!2sus!4v1698335414332!5m2!1sen!2sus" width="100%" height="400px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    <iframe class="google-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.9740082474946!2d-76.70929462435923!3d37.272043440960424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b0890b954e02a1%3A0x614dbdea001cefcf!2sBlue%20Talon%20Bistro!5e0!3m2!1sen!2sus!4v1698335414332!5m2!1sen!2sus" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
                     <div class="pricing">
                         <div class="pricing1">
