Started FAQ Page

--- a/faq.html
+++ b/faq.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +11,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Blue Talon Bistro Turkey Trot 2023</title>
 </head>
+
 <body>
     <div class="container">
         <!-- For Hamburger Menu -->
@@ -31,6 +33,15 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="faq-hero">
+            <h1>Frequently Asked Questions</h1>
         </div>
+
+        <div class="questions">
+            
+        </div>
+    </div>
 </body>
+
 </html>
