Media Query for FAQ p1

--- a/faq.html
+++ b/faq.html
@@ -73,7 +73,9 @@
             <h2>Register for a run!</h2>
             <div class="registration-box">
                 <img src="project-images/registration-img.jpg" alt="">
-                <h3>5K Run Pricing</h3>
+
+                <div class="faq-pricing">
+                    <h3>5K Run Pricing</h3>
                 <p>$45.00 through November 23rd, 2023 <br>
                     $52.00 until registration closes
                 </p>
@@ -84,6 +86,7 @@
                 <p>$20.00 until registration closes</p>
                 <button class="register-button pricing2-btn"><a href="#"
                     target="_blank">Register</a></button>
+                </div>
             </div>
         </div>
         <div class="more-content">
