Media Querey for FAQ pt.2

--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="#" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -72,6 +72,7 @@
         <div class="faq-register">
             <h2>Register for a run!</h2>
             <div class="registration-box">
+                
                 <img src="project-images/registration-img.jpg" alt="">
 
                 <div class="faq-pricing">
