--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,11 +11,12 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Blue Talon Bistro Turkey Trot 2023</title>
 </head>
+
 <body>
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="#" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -31,6 +33,45 @@
                 </ul>
             </nav>
         </div>
+
+        <div class="contact-hero">
+            <h1>Contact Us</h1>
         </div>
+
+        <div class="contact">
+            <h2>Have Any Questions?</h2>
+            <p>Feel free to fill out this form with any more questions, and a team member will reach out soon!</p>
+
+            <div class="contact-form">
+                <form action="" method="get">
+                    <div class="contact-form-row">
+                        <div>
+                            <label for="fname">First Name</label>
+                            <input type="text" id=fname name="fname" placeholder="John" required>
+                        </div>
+                        <div>
+                            <label for="lname">Last Name</label>
+                            <input type="text" id=lname name="lname" placeholder="Adams" required>
+                        </div>
+                    </div>
+
+                    <div class="contact-form-row">
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id=email name="email" placeholder="john.adams@gmail.com" required>
+                        </div>
+                        <div>
+                            <label for="message">Message</label>
+                            <input type="text" id="message" name="message" required>
+                        </div>
+                    </div>
+                    <div class="contact-form-bottom">
+                        <button class="register-button submit-btn">Submit</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
