--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="#" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
