--- a/contact.html
+++ b/contact.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -28,8 +28,9 @@
                     <li><a href="https://www.bluetalonbistro.com/" target="
   _blank">Blue Talon Bistro</a></li>
                     <li><a href="#">Event Details</a></li>
-                    <li><a href="#">Volunteer</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
+                            target="_blank">Register</a></li>
                 </ul>
             </nav>
         </div>
@@ -62,15 +63,77 @@
                         </div>
                         <div>
                             <label for="message">Message</label>
-                            <input type="text" id="message" name="message" required>
+                            <textarea name="message" id="message" cols="100%"></textarea>
+                            <!-- <input type="text" id="message" name="message" required> -->
                         </div>
                     </div>
                     <div class="contact-form-bottom">
+                        <button class="register-button reset-btn"><a href="contact.html">Reset</a></button>
                         <button class="register-button submit-btn">Submit</button>
                     </div>
                 </form>
             </div>
+
+            <hr>
+
+            <div class="contact-info">
+                <h1>Contact Info</h1>
+                <div class="btb-contact">
+                    <div class="btb-info">
+                        <img src="project-images/location-icon.svg" alt="">
+                        <p>420 Prince George Street <br>Williamsburg, VA 23185</p>
+                    </div>
+                    <div class="btb-info">
+                        <img src="project-images/phone-icon.svg" alt="">
+                        <p>+1 (757) 476-2583</p>
+                    </div>
+                    <div class="btb-info">
+                        <img src="project-images/email-icon.svg" alt="">
+                        <p>contact@bluetalonbistro.com</p>
+                    </div>
+                </div>
+            </div>
         </div>
+        <div class="more-content">
+            <div class="content-cards">
+                <div class="display-card faq-card">
+                    <h1>FAQ</h1>
+                    <a href="faq.html" target="_blank"></a></a>
+                </div>
+                <div class="display-card contact-card">
+                    <h1>Contact Us</h1>
+                    <a href="contact.html" target="_blank"></a></a>
+                </div>
+            </div>
+        </div>
+
+        <footer>
+            <div class="left-footer">
+                <h1>Blue Talon Bistro</h1>
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="https://www.bluetalonbistro.com/" target="_blank">Blue Talon Bistro</a></li>
+                    <li><a href="#">FAQ</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
+                </ul>
+            </div>
+            <div class="right-footer">
+                <div class="footer-socials">
+                    <a href="https://www.facebook.com/BlueTalonTurkeyTrot5K/" target="_blank">
+                        <i class="fa-brands fa-facebook"></i>
+                    </a>
+                    <a href="https://twitter.com/BlueTalonBar" target="_blank">
+                        <i class="fa-brands fa-twitter"></i>
+                    </a>
+                    <a href="https://www.instagram.com/bluetalonbistro/" target="_blank">
+                        <i class="fa-brands fa-instagram"></i>
+                    </a>
+                </div>
+                <p>Copyright © 2023 Blue Talon Bistro</p>
+
+            </div>
+        </footer>
     </div>
 </body>
 
