--- a/faq.html
+++ b/faq.html
@@ -16,7 +16,7 @@
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -28,8 +28,9 @@
                     <li><a href="https://www.bluetalonbistro.com/" target="
   _blank">Blue Talon Bistro</a></li>
                     <li><a href="#">Event Details</a></li>
-                    <li><a href="#">Volunteer</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
+                            target="_blank">Register</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,52 +42,64 @@
         <div class="questions">
             <div class="q-a">
                 <h4>Q: What time does the race start?</h4>
-                <p>The 5K Run starts at 8:30 a.m. while the 1 Mile Fun Run starts at 10:00 a.m. – both in front of the Blue Talon Bistro on Prince George St. Post-run activities begin at 9:30 a.m. and continue into the early afternoon until 1 p.m.</p>
+                <p>The 5K Run starts at 8:30 a.m. while the 1 Mile Fun Run starts at 10:00 a.m. – both in front of the
+                    Blue Talon Bistro on Prince George St. Post-run activities begin at 9:30 a.m. and continue into the
+                    early afternoon until 1 p.m.</p>
             </div>
             <div class="q-a">
                 <h4>Q: Is parking available?</h4>
-                <p>Yes, paid parking is available in the Prince George St. Parking Deck, or in the many lots surrounding Merchant Square, which are within walking distance to the Bistro. More information on parking can be found here.</p>
+                <p>Yes, paid parking is available in the Prince George St. Parking Deck, or in the many lots surrounding
+                    Merchant Square, which are within walking distance to the Bistro. More information on parking can be
+                    found here.</p>
             </div>
             <div class="q-a">
                 <h4>Q: When and where can I pick up my bib for the run??</h4>
-                <p>Pickup for bibs and t-shirts is open on November 22 from 2 p.m. to 6 p.m. at the Blue Talon Bistro. Please use the entrance facing Prince George St. as you will be exiting via Merchant’s Square.</p>
+                <p>Pickup for bibs and t-shirts is open on November 22 from 2 p.m. to 6 p.m. at the Blue Talon Bistro.
+                    Please use the entrance facing Prince George St. as you will be exiting via Merchant’s Square.</p>
             </div>
             <div class="q-a">
                 <h4>Q: Is there a time limit for the run(s)?</h4>
-                <p>Yes. The 5K Race must be completed within 65 minutes from the start time. However, the 1 Mile Fun Run does not have a strict time limit.</p>
+                <p>Yes. The 5K Race must be completed within 65 minutes from the start time. However, the 1 Mile Fun Run
+                    does not have a strict time limit.</p>
             </div>
             <div class="q-a">
                 <h4>Q: Are dogs or strollers permitted on course?</h4>
-                <p>Yes! Both dogs and stollers are allowed on the course. We do, however, require dogs to be on a leash or harnessed while on the course and around the bistro, per Merchant Square's regulations.</p>
+                <p>Yes! Both dogs and stollers are allowed on the course. We do, however, require dogs to be on a leash
+                    or harnessed while on the course and around the bistro, per Merchant Square's regulations.</p>
             </div>
             <div class="q-a">
                 <h4>Q: I'm a runner from out-of-town/state, where can I stay overnight?</h4>
-                <p>Before travelling to Williamsburg Historic Triangle, please plan ahead and view Colonial Williamsburg’s website to see the hotels in the area.</p>
+                <p>Before travelling to Williamsburg Historic Triangle, please plan ahead and view Colonial
+                    Williamsburg’s website to see the hotels in the area.</p>
             </div>
             <div class="q-a">
                 <h4>Q: Where does the participation fee go?</h4>
-                <p>Participation fees and money raised during the Charrity Raffle will be supporting many local charities & non-profits in the Williamsburg area. Some of those in the past included Literacy for Life, the R.F. Wilkinson Family YMCA, FISH Inc. and more!</p>
+                <p>Participation fees and money raised during the Charrity Raffle will be supporting many local
+                    charities & non-profits in the Williamsburg area. Some of those in the past included Literacy for
+                    Life, the R.F. Wilkinson Family YMCA, FISH Inc. and more!</p>
             </div>
         </div>
 
         <div class="faq-register">
             <h2>Register for a run!</h2>
             <div class="registration-box">
-                
+
                 <img src="project-images/registration-img.jpg" alt="">
 
                 <div class="faq-pricing">
                     <h3>5K Run Pricing</h3>
-                <p>$45.00 through November 23rd, 2023 <br>
-                    $52.00 until registration closes
-                </p>
-                <button class="register-button pricing2-btn"><a href="#"
-                    target="_blank">Register</a></button>
+                    <p>$45.00 through November 23rd, 2023 <br>
+                        $52.00 until registration closes
+                    </p>
+                    <button class="register-button pricing2-btn"><a
+                            href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
+                            target="_blank">Register</a></button>
 
-                <h3>1 Mile Fun Run Pricing</h3>
-                <p>$20.00 until registration closes</p>
-                <button class="register-button pricing2-btn"><a href="#"
-                    target="_blank">Register</a></button>
+                    <h3>1 Mile Fun Run Pricing</h3>
+                    <p>$20.00 until registration closes</p>
+                    <button class="register-button pricing2-btn"><a
+                            href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
+                            target="_blank">Register</a></button>
                 </div>
             </div>
         </div>
