--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="index.html" target="_blank">2023 Turkey Trot</a></h1>
+            <h1 class="logo"> <a href="index.html">2023 Turkey Trot</a></h1>
             <!-- h1 tag will be replaced with actual logo when complete -->
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
@@ -29,8 +29,8 @@
                     <li><a href="https://www.bluetalonbistro.com/" target="
   _blank">Blue Talon Bistro</a></li>
                     <li><a href="#">Event Details</a></li>
-                    <li><a href="#">Volunteer</a></li>
-                    <li><a href="#">Register</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot" target="_blank">Register</a></li>
                 </ul>
             </nav>
         </div>
@@ -41,7 +41,7 @@
             <div class="hero">
                 <div class="hero-content">
                     <h1>2023 Blue Talon Bistro <br> Turkey Trot</h1>
-                    <button class="register-button hero-btn">Register</button>
+                    <button class="register-button hero-btn"> <a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot">Register</a></button>
                 </div>
             </div>
 
@@ -98,13 +98,13 @@
                         <div class="pricing1">
                             <h3>5K Run Pricing</h3>
                             <p>$45.00 through Nov. 23rd, 2023 <br> $52.00 until registration closes</p>
-                            <button class="register-button pricing1-btn"><a href="#"
+                            <button class="register-button pricing1-btn"><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
                                     target="_blank">Register</a></button>
                         </div>
                         <div class="pricing1">
                             <h3>1 Mile Fun Run Pricing</h3>
                             <p>$20.00 until registration closes</p>
-                            <button class="register-button pricing1-btn"><a href="#"
+                            <button class="register-button pricing1-btn"><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
                                     target="_blank">Register</a></button>
                         </div>
                     </div>
@@ -210,7 +210,10 @@
                                 <label class="agree-message" for="agree">I agree to the <a href="#">Terms and
                                         Conditions</a></label>
                             </div>
+                            <div class="volunteer-btns">
+                                <button class="register-button reset-btn"><a href="contact.html">Reset</a></button>
                             <button class="register-button submit-btn">Submit</button>
+                            </div>
                         </div>
                     </form>
                 </div>
