Media Querey for contact form

--- a/contact.html
+++ b/contact.html
@@ -83,17 +83,18 @@
                         <img src="project-images/location-icon.svg" alt="">
                         <p>420 Prince George Street <br>Williamsburg, VA 23185</p>
                     </div>
+                    <div class="btb-info btb-email">
+                        <img src="project-images/email-icon.svg" alt="">
+                        <p>contact@bluetalonbistro.com</p>
+                    </div>
                     <div class="btb-info">
                         <img src="project-images/phone-icon.svg" alt="">
                         <p>+1 (757) 476-2583</p>
                     </div>
-                    <div class="btb-info">
-                        <img src="project-images/email-icon.svg" alt="">
-                        <p>contact@bluetalonbistro.com</p>
-                    </div>
                 </div>
             </div>
         </div>
+
         <div class="more-content">
             <div class="content-cards">
                 <div class="display-card faq-card">
