--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <ul>
                     <li><a href="https://www.bluetalonbistro.com/" target="
   _blank">Blue Talon Bistro</a></li>
-                    <li><a href="#">Event Details</a></li>
+                    <li><a href="index.html#event-details">Event Details</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot" target="_blank">Register</a></li>
                 </ul>
@@ -68,7 +68,7 @@
                 <img src="project-images/about-img.jpg" alt="runner">
             </div>
 
-            <div class="event-details">
+            <div class="event-details" id="event-details">
                 <h1>Event Details</h1>
                 <div class="details-boxes">
                     <div class="details-box">
