--- a/index.html
+++ b/index.html
@@ -11,14 +11,16 @@
         integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Blue Talon Bistro Turkey Trot 2023</title>
+    <link rel="icon" type="image/x-icon" href="/project-images/btb-favicon2.png">
 </head>
 
 <body>
     <div class="container">
         <!-- For Hamburger Menu -->
         <div class="navigation">
-            <h1 class="logo"> <a href="index.html">2023 Turkey Trot</a></h1>
+            <!-- <h1 class="logo"> <a href="index.html">2023 Turkey Trot</a></h1> -->
             <!-- h1 tag will be replaced with actual logo when complete -->
+            <a href="index.html"><img class="btb-logo" src="project-images/btb-logo1.png" alt=""></a>
             <input type="checkbox" id="nav-toggle" class="nav-toggle">
             <label for="nav-toggle" class="nav-toggle-label">
                 <span><i class="fa-solid fa-bars"></i></span>
