Added logo to footer

--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 
         <footer>
             <div class="left-footer">
-                <h1>Blue Talon Bistro</h1>
+                <img class="footer-logo" src="project-images/btb-logo.svg" alt="">
                 <ul>
                     <li><a href="#">Home</a></li>
                     <li><a href="https://www.bluetalonbistro.com/" target="_blank">Blue Talon Bistro</a></li>
