--- a/faq.html
+++ b/faq.html
@@ -109,11 +109,11 @@
             <div class="content-cards">
                 <div class="display-card faq-card">
                     <h1>FAQ</h1>
-                    <a href="faq.html" target="_blank"></a></a>
+                    <a href="faq.html"></a></a>
                 </div>
                 <div class="display-card contact-card">
                     <h1>Contact Us</h1>
-                    <a href="contact.html" target="_blank"></a></a>
+                    <a href="contact.html"></a></a>
                 </div>
             </div>
         </div>
