--- a/index.html
+++ b/index.html
@@ -94,7 +94,8 @@
                 <div class="map-schedule">
                     <iframe class="google-map"
                         src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3174.9740082474946!2d-76.70929462435923!3d37.272043440960424!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89b0890b954e02a1%3A0x614dbdea001cefcf!2sBlue%20Talon%20Bistro!5e0!3m2!1sen!2sus!4v1698335414332!5m2!1sen!2sus"
-                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                        allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+                    </iframe>
 
                     <div class="pricing">
                         <div class="pricing1">
@@ -225,11 +226,11 @@
                 <div class="content-cards">
                     <div class="display-card faq-card">
                         <h1>FAQ</h1>
-                        <a href="faq.html" target="_blank"></a></a>
+                        <a href="faq.html"></a></a>
                     </div>
                     <div class="display-card contact-card">
                         <h1>Contact Us</h1>
-                        <a href="contact.html" target="_blank"></a></a>
+                        <a href="contact.html"></a></a>
                     </div>
                 </div>
             </div>
