--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                 <ul>
                     <li><a href="https://www.bluetalonbistro.com/" target="
   _blank">Blue Talon Bistro</a></li>
-                    <li><a href="#">Event Details</a></li>
+                    <li><a href="index.html#event-details">Event Details</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                     <li><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
                             target="_blank">Register</a></li>
