--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
             <div class="hero">
                 <div class="hero-content">
-                    <h1>2023 Blue Talon Bistro <br> Turkey Trot</h1>
+                    <h1>2024 Blue Talon Bistro <br> Turkey Trot</h1>
                     <button class="register-button hero-btn"> <a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot">Register</a></button>
                 </div>
             </div>
@@ -76,7 +76,7 @@
                     <div class="details-box">
                         <h3>Date & Time</h3>
                         <p>
-                            <b>Thursday, November 23 2023</b><br>
+                            <b>Thursday, November 23, 2024</b><br>
                             5K Race starts at 8:30 a.m.<br>
                             1 Mile Fun Run starts at 10:00am
                         </p>
@@ -100,7 +100,7 @@
                     <div class="pricing">
                         <div class="pricing1">
                             <h3>5K Run Pricing</h3>
-                            <p>$45.00 through Nov. 23rd, 2023 <br> $52.00 until registration closes</p>
+                            <p>$45.00 through Nov. 23rd, 2024 <br> $52.00 until registration closes</p>
                             <button class="register-button pricing1-btn"><a href="https://bluetalonbistro.enmotive.com/events/2023-blue-talon-bistro-turkey-trot"
                                     target="_blank">Register</a></button>
                         </div>
@@ -116,14 +116,14 @@
                 <div class="more-details">
                     <div class="schedule">
                         <h2>Schedule</h2>
-                        <h4>Wednesday, November 22 2023</h4>
+                        <h4>Wednesday, November 22 2024</h4>
                         <div class="list-item">
                             <p class="time">2:00-6:00 p.m</p>
                             <p class="activity">Packet pick up at the Blue Talon Bistro entrance facing Prince George
                                 St.</p>
                         </div>
 
-                        <h4>Thursday, November 23 2023</h4>
+                        <h4>Thursday, November 23 2024</h4>
                         <div class="list-item">
                             <p class="time">8:15 a.m.</p>
                             <p class="activity">Registration Ends</p>
@@ -153,7 +153,7 @@
                         </div>
 
                         <div class="accomidations">
-                            <h2>Accomidations & Things To Do</h2>
+                            <h2>Accommodations & Things To Do</h2>
                             <p>We encourage all visitors to take advantage of Blue Talon Bistro’s prime location within
                                 the Williamsburg historic area. More information can be found at the link below:</p>
                             <button class="register-button acc-btn"><a
@@ -238,6 +238,8 @@
             <footer>
                 <div class="left-footer">
                     <img class="footer-logo" src="project-images/btb-logo.svg" alt="">
+                </div>
+                <div class="middle-footer">
                     <ul>
                         <li><a href="#">Home</a></li>
                         <li><a href="https://www.bluetalonbistro.com/" target="_blank">Blue Talon Bistro</a></li>
