Updated sponsor logos

--- a/index.html
+++ b/index.html
@@ -165,12 +165,19 @@
 
             </div>
             <div class="sponsors">
-                <h1>Our Sponsors</h1>
-                <div class="sponsor-logos">
+                <h1>Thank You to Our Sponsors</h1>
+                <div class="sponsor-logos-1">
                     <img class="op-bank" src="project-images/mobile-bank-logo.svg" alt="Old Point Bank Logo">
-                    <img class="maxfit" src="project-images/mobile-maxfit-logo.svg" alt="MaxFit Logo">
-                    <img class="literacy4life" src="project-images/mobile-literacy-for-life_logo.svg"
-                        alt="Literacy For Life Logo">
+                    <img class="riverside" src="project-images/riverside-logo.svg" alt="Riverside Logo">
+                </div>
+                <div class="sponsor-logos-2">
+                    <img class="illy" src="project-images/illy_caffe_Logo.svg" alt="Illy Caffe Logo">
+                    <img class="towne-insurance" src="project-images/towne-insurance_logo.svg" alt="Towne Insurance Logo">
+                    <img class="iron-bound" src="project-images/iron-bound-gym.svg" alt="Iron Bound Gym Logo">
+                </div>
+                <div class="sponsor-logos-3">
+                    <img class="time-n-pay" src="project-images/time__pay_cover.svg" alt="Time and Pay Logo">
+                    <img class="maxfit" src="project-images/maxfit-gym_logo.svg" alt="Maxfit Gym Logo">
                 </div>
             </div>
 
